# sample-backend-api

./: .gitignore  db.sqlite3  pyproject.toml  requirements.txt
config/: settings.py
users/: authentication.py  models.py
users/migrations/: 0001_initial.py
